fix menu item padding in Header component on mobile

--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -1,3 +1,7 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
 .Header {
   // border-bottom: 1px solid var(--bs-gray-400);
   font-size: 1.25rem;
@@ -54,12 +58,18 @@
       justify-content: center;
       text-align: center;
       flex-grow: 1;
-      font-size: 2.25rem;
+      font-size: 1.5rem;
+      padding: 0.25rem .5rem;
       border-top: 1px solid var(--bs-gray-300);
       border-bottom: 1px solid var(--bs-gray-300);
       font-family: var(--serif-font-family);
       &:hover,
       &.active {
+      }
+
+      @include media-breakpoint-up(md) {
+        font-size: 2.25rem;
+        padding: 0.5rem 1rem;
       }
     }
   }
